fix(web/app/modules/event-listener): fix click handling of dropdown elements

--- a/web/index.html
+++ b/web/index.html
@@ -190,7 +190,7 @@
             </div>
           </div>
           
-          <button class="btn btn-success my-2 my-sm-0 shadow-none" id="encrypt-button" onclick="this.blur();">Encrypt</button>
+          <button class="btn btn-success my-2 my-sm-0 shadow-none" id="encrypt-button">Encrypt</button>
 
         </div>
 
