refactor(web): improve ui buttons style

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
           <div class="settings-module" id="machine">
             <div class="dropdown">
               <p>MACHINE</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level1" type="button" id="machine-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level1" type="button" id="machine-button" data-bs-toggle="dropdown" aria-expanded="false">
                 Enigma V25 "Strongciphermachine"
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="machine-list">
@@ -38,7 +38,7 @@
           <div class="settings-module" id="reflector">
             <div class="dropdown">
               <p>REFLECTOR</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level1" type="button" id="reflector-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level1" type="button" id="reflector-button" data-bs-toggle="dropdown" aria-expanded="false">
                 A
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="reflector-list">
@@ -50,7 +50,7 @@
 
             <div class="dropdown">
               <p>ROTOR 1</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level1" type="button" id="rotor1-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level1" type="button" id="rotor1-button" data-bs-toggle="dropdown" aria-expanded="false">
                 I
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="rotor1-list">
@@ -59,7 +59,7 @@
 
             <div class="dropdown">
               <p>POSITION</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level2" type="button" id="position1-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level2" type="button" id="position1-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="position1-list">
@@ -68,7 +68,7 @@
 
             <div class="dropdown">
               <p>RING</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level3" type="button" id="ring1-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level3" type="button" id="ring1-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="ring1-list">
@@ -81,7 +81,7 @@
 
             <div class="dropdown">
               <p>ROTOR 2</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level1" type="button" id="rotor2-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level1" type="button" id="rotor2-button" data-bs-toggle="dropdown" aria-expanded="false">
                 II
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="rotor2-list">
@@ -90,7 +90,7 @@
 
             <div class="dropdown">
               <p>POSITION</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level2" type="button" id="position2-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level2" type="button" id="position2-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="position2-list">
@@ -99,7 +99,7 @@
 
             <div class="dropdown">
               <p>RING</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level3" type="button" id="ring2-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level3" type="button" id="ring2-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="ring2-list">
@@ -112,7 +112,7 @@
 
             <div class="dropdown">
               <p>ROTOR 3</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level1" type="button" id="rotor3-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level1" type="button" id="rotor3-button" data-bs-toggle="dropdown" aria-expanded="false">
                 III
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="rotor3-list">
@@ -121,7 +121,7 @@
 
             <div class="dropdown">
               <p>POSITION</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level2" type="button" id="position3-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level2" type="button" id="position3-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="position3-list">
@@ -130,7 +130,7 @@
 
             <div class="dropdown">
               <p>RING</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level3" type="button" id="ring3-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level3" type="button" id="ring3-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="ring3-list">
@@ -143,7 +143,7 @@
 
             <div class="dropdown">
               <p>ROTOR 4</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level1" type="button" id="rotor4-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level1" type="button" id="rotor4-button" data-bs-toggle="dropdown" aria-expanded="false">
                 IV
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="rotor4-list">
@@ -152,7 +152,7 @@
 
             <div class="dropdown">
               <p>POSITION</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level2" type="button" id="position4-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level2" type="button" id="position4-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="position4-list">
@@ -161,7 +161,7 @@
 
             <div class="dropdown">
               <p>RING</p>
-              <button class="btn btn-light btn-sm dropdown-toggle button-level3" type="button" id="ring4-button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary btn-sm dropdown-toggle button-level3" type="button" id="ring4-button" data-bs-toggle="dropdown" aria-expanded="false">
                 1
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" id="ring4-list">
