--- a/web/index.html
+++ b/web/index.html
@@ -6,17 +6,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
-    <title>Cipher Machines - Text Encryption Online</title>
+    <title>Enigma - Text Encryption Online</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
 
-      <a class="navbar-brand" href="/">Cipher<br>Machines</a>
+      <a class="navbar-brand" href="/"><img src="/static/images/enigma_logo.svg" id="logo"></a>
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
